<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.w0285037.assignment1.MainActivity">

    <EditText
        android:layout_height="64dp"
        android:inputType="numberDecimal"
        android:ems="10"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:layout_width="353dp"
        android:id="@+id/edtDisplay"
        android:focusable="false"
        android:longClickable="false"
        android:cursorVisible="false"
        android:clickable="false"
        android:text="0"
        android:textSize="36sp"
        android:gravity="end" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnRmvDigit"
        android:id="@+id/btnRmvDigit"
        android:layout_row="1"
        android:layout_column="1"
        android:textSize="18sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnPosNeg"
        android:id="@+id/btnPosNeg"
        android:layout_row="1"
        android:layout_column="2"
        android:textSize="18sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDivision"
        android:id="@+id/btnDivision"
        android:layout_row="1"
        android:layout_column="3"
        android:textSize="18sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn7"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/btn7"
        android:textSize="18sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn8"
        android:layout_row="2"
        android:layout_column="1"
        android:text="@string/btn8"
        android:textSize="18sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn9"
        android:layout_row="2"
        android:layout_column="2"
        android:text="@string/btn9"
        android:textSize="18sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnMultiplication"
        android:layout_row="2"
        android:layout_column="3"
        android:text="@string/btnMultiplication"
        android:textSize="18sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn4"
        android:layout_row="3"
        android:layout_column="0"
        android:text="@string/btn4"
        android:textSize="18sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn5"
        android:layout_row="3"
        android:layout_column="1"
        android:text="@string/btn5"
        android:textSize="18sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn6"
        android:layout_row="3"
        android:layout_column="2"
        android:text="@string/btn6"
        android:textSize="18sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSubtraction"
        android:layout_row="3"
        android:layout_column="3"
        android:text="@string/btnSubtraction"
        android:textSize="18sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn2"
        android:layout_row="4"
        android:layout_column="1"
        android:text="@string/btn2"
        android:textSize="18sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn3"
        android:layout_row="4"
        android:layout_column="2"
        android:text="@string/btn3"
        android:textSize="18sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnAddition"
        android:layout_row="4"
        android:layout_column="3"
        android:text="@string/btnAddition"
        android:textSize="18sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnDec"
        android:layout_row="5"
        android:layout_column="2"
        android:text="@string/btnDec"
        android:textSize="18sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnEquals"
        android:layout_row="5"
        android:layout_column="3"
        android:text="@string/btnEquals"
        android:textSize="18sp" />

    <Button
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn0"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:text="@string/btn0"
        android:textSize="18sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn1"
        android:layout_row="4"
        android:layout_column="0"
        android:text="@string/btn1"
        android:textSize="18sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnClear"
        android:id="@+id/btnClear"
        android:layout_row="1"
        android:layout_column="0"
        android:textSize="18sp" />

</GridLayout>
